@@ -14,8 +14,9 @@ version 0.11.0-pre11:
 	  (thanks Neil Sanchala)
 	* Some perl updates (thanks to Sean Egan)
 	* IRC got the following slash commands:
-      op, deop, voice, devoice, mode, raw, quote, and kick (thanks
+	  op, deop, voice, devoice, mode, raw, quote, and kick (thanks
 	  to Sean Egan)
+	* MSN Properly handles URL decoding of 'friendly' names
 
 version 0.11.0-pre10 (04/13/2001):
 	* Many, many bug fixes
